# xi--code

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.ai/: context.md  conventions.md
.github/workflows/: ci.yml
crates/zhi-core/: AGENTS.md  Cargo.toml
crates/zhi-core/src/: lib.rs  snapshot.rs  store.rs
crates/zhi-gtk/: AGENTS.md  Cargo.toml
crates/zhi-gtk/src/: main.rs  markdown.rs
crates/zhi-lsp/: AGENTS.md  Cargo.toml
crates/zhi-lsp/src/: lib.rs
crates/zhi-mcp/: AGENTS.md  Cargo.toml
crates/zhi-mcp/src/: lib.rs
crates/zhi-provider/: AGENTS.md  Cargo.toml
crates/zhi-provider/src/: auth.rs  catalog.rs  lib.rs  oauth.rs
crates/zhi-provider/src/oauth/: openai.rs  pkce.rs  server.rs
crates/zhi-tool/: AGENTS.md  Cargo.toml
crates/zhi-tool/src/: builtins.rs  context.rs  lib.rs  registry.rs
docs/: architecture.md  glossary.md  roadmap.md
docs/decisions/: 0000-template.md  0001-motor-nativo-rust.md  0002-gtk4-libadwaita-relm4.md  0003-workspace-cargo.md  0004-alcance-paridad-funcional.md  0005-proveedor-deepseek.md  0006-persistencia-sqlite.md  0007-tools-permisos-bucle-agente.md  0008-multi-proveedor-catalogo-estatico.md  0009-catalogo-models-dev.md  0010-auth-oauth-openai.md
