[package]
name = "zhi-provider"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
