[package]
name = "zhi-tool"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
